Add Clean Architecture Deps. Refs.

--- a/src/TABP.API/TABP.API.csproj
+++ b/src/TABP.API/TABP.API.csproj
@@ -11,4 +11,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TABP.Application\TABP.Application.csproj" />
+    <ProjectReference Include="..\TABP.Infrastructure\TABP.Infrastructure.csproj" />
+    <ProjectReference Include="..\TABP.Domain\TABP.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
