--- a/src/TABP.Infrastructure/TABP.Infrastructure.csproj
+++ b/src/TABP.Infrastructure/TABP.Infrastructure.csproj
@@ -5,6 +5,11 @@
     <ProjectReference Include="..\TABP.Domain\TABP.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
