Add Config Bindings and environment variable

--- a/src/TABP.API/appsettings.Development.json
+++ b/src/TABP.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "SQLString": "Server=localhost,1433;Database=TABP;User Id=sa;Password=Passyw0rd;TrustServerCertificate=True;"
   }
 }
