--- a/src/TABP.API/appsettings.Development.json
+++ b/src/TABP.API/appsettings.Development.json
@@ -9,9 +9,9 @@
     "SQLString": "Server=localhost,1433;Database=TABP;User Id=sa;Password=Passyw0rd;TrustServerCertificate=True;"
   },
   "JwtConfigurations": {
-        "Key": "AB5911CE85AAF8A39BB556427CF4F",
+        "Key": "AB5911CE85AAF8A39BB556427CF4FSSS",
         "Issuer": "http://localhost:5137",
         "Audience": "http://localhost:5137",
-        "ExpirationMinutes": 10
+        "ExpirationTimeMinutes": 5
     }
 }
