--- a/src/TABP.Infrastructure/TABP.Infrastructure.csproj
+++ b/src/TABP.Infrastructure/TABP.Infrastructure.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.1" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.6" />
   </ItemGroup>
 
   <PropertyGroup>
