--- a/src/TABP.API/appsettings.Development.json
+++ b/src/TABP.API/appsettings.Development.json
@@ -6,12 +6,23 @@
     }
   },
   "ConnectionStrings": {
-    "SQLString": "Server=localhost,1433;Database=TABP;User Id=sa;Password=Passyw0rd;TrustServerCertificate=True;"
+    "SQLString": "Server=localhost,1433;Database=TABP;User Id=sa;Password=Passyw0rd;TrustServerCertificate=True;",
+    "Redis": "localhost:6379"
   },
   "JwtConfigurations": {
         "Key": "AB5911CE85AAF8A39BB556427CF4FSSS",
         "Issuer": "http://localhost:5137",
         "Audience": "http://localhost:5137",
         "ExpirationTimeMinutes": 50000
+    },
+    "EmailSettings": {
+      "DefaultFromEmail": "noreply@yourdomain.com",
+      "SMTPSettings": {
+        "Host": "localhost",
+        "Port": 2077,
+        "User": "",
+        "Password": "",
+        "EnableSsl": false
+      }
     }
 }
