Add Logging Development Configuration

--- a/src/TABP.API/appsettings.Development.json
+++ b/src/TABP.API/appsettings.Development.json
@@ -1,10 +1,28 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "Serilog": {
+  "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+  "MinimumLevel": {
+    "Default": "Debug"
   },
+  "WriteTo": [
+    {
+      "Name": "Console"
+    },
+    {
+      "Name": "File",
+      "Args": {
+        "path": "logs/log-.txt",
+        "rollingInterval": "Day",
+        "rollOnFileSizeLimit": true,
+        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+      }
+    }
+  ],
+  "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+  "Properties": {
+    "ApplicationName": "TABP"
+  }
+},
   "ConnectionStrings": {
     "SQLString": "Server=localhost,1433;Database=TABP;User Id=sa;Password=Passyw0rd;TrustServerCertificate=True;",
     "Redis": "localhost:6379"
