Change logging settings to exclude writing debug level logs on File

--- a/src/TABP.API/appsettings.Development.json
+++ b/src/TABP.API/appsettings.Development.json
@@ -1,28 +1,29 @@
 {
   "Serilog": {
-  "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
-  "MinimumLevel": {
-    "Default": "Debug"
-  },
-  "WriteTo": [
-    {
-      "Name": "Console"
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Debug"
     },
-    {
-      "Name": "File",
-      "Args": {
-        "path": "logs/log-.txt",
-        "rollingInterval": "Day",
-        "rollOnFileSizeLimit": true,
-        "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/log-.txt",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact",
+          "restrictedToMinimumLevel": "Information"
+        }
       }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "ApplicationName": "TABP"
     }
-  ],
-  "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
-  "Properties": {
-    "ApplicationName": "TABP"
-  }
-},
+  },
   "ConnectionStrings": {
     "SQLString": "Server=localhost,1433;Database=TABP;User Id=sa;Password=Passyw0rd;TrustServerCertificate=True;",
     "Redis": "localhost:6379"
@@ -34,7 +35,7 @@
         "ExpirationTimeMinutes": 50000
     },
     "EmailSettings": {
-      "DefaultFromEmail": "noreply@yourdomain.com",
+      "DefaultFromEmail": "cs.bashar.herbawi@TABP.com",
       "SMTPSettings": {
         "Host": "localhost",
         "Port": 2077,
