--- a/src/TABP.API/TABP.API.csproj
+++ b/src/TABP.API/TABP.API.csproj
@@ -32,4 +32,9 @@
     <ProjectReference Include="..\TABP.Domain\TABP.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+		<InternalsVisibleTo Include="TABP.API.IntegrationTests" />
+	</ItemGroup>
+
+
 </Project>
