--- a/Tests/TABP.API.IntegrationTests/TABP.API.IntegrationTests.csproj
+++ b/Tests/TABP.API.IntegrationTests/TABP.API.IntegrationTests.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+      <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
       <PackageReference Include="AutoFixture" Version="4.18.1" />
       <PackageReference Include="FluentAssertions" Version="6.12.0" />
       <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="8.0.1" />
