--- a/.github/workflows/build-and-test-on-all-platforms.yml
+++ b/.github/workflows/build-and-test-on-all-platforms.yml
@@ -43,7 +43,7 @@ jobs:
             -e SA_PASSWORD="$SQL_SA_PASSWORD" \
             -e ACCEPT_EULA=Y \
             -e MSSQL_PID=Express \
-            -e MSSQL_MEMORY_LIMIT_MB=2048 \
+            -e MSSQL_MEMORY_LIMIT_MB=4096 \
             -p 1433:1433 \
             mcr.microsoft.com/mssql/server:2022-latest
 
@@ -53,13 +53,13 @@ jobs:
 
       - name: Wait for SQL Server to Start
         run: |
-          for i in {1..4}; do
+          for i in {1..2}; do
             if docker exec -i TABP /opt/mssql-tools/bin/sqlcmd -S localhost,1433 -U sa -P "$SQL_SA_PASSWORD" -Q "SELECT 1;"; then
               echo "SQL Server is ready."
               break
             else
               echo "Waiting for SQL Server to start..."
-              sleep 10
+              sleep 20
             fi
           done
 
@@ -71,8 +71,13 @@ jobs:
         run: |
           docker exec -i TABP /opt/mssql-tools18/bin/sqlcmd -S localhost,1433 -U sa -P "$SQL_SA_PASSWORD" -C -Q "IF NOT EXISTS (SELECT name FROM sys.databases WHERE name = 'TABP') CREATE DATABASE TABP;"
 
+      - name: Clear NuGet Cache
+        run: |
+          rm -rf ~/.nuget/packages
+          dotnet nuget locals all --clear
+
       - name: Restore Dependencies
-        run: dotnet restore TABP.sln
+        run: dotnet restore --force
 
       - name: Build Solution
         run: dotnet build TABP.sln --configuration Release --no-restore
@@ -86,6 +91,9 @@ jobs:
       - name: Apply Migrations
         working-directory: src/TABP.Infrastructure
         run: dotnet ef database update --startup-project ../TABP.API/TABP.API.csproj --context HotelBookingDbContext --connection "$ConnectionStrings__SQLString"
+      
+      - name: (DBUG) Check Installed Packages
+        run: dotnet list package
 
       - name: Run API Integration Tests
         run: dotnet test Tests/TABP.API.IntegrationTests/TABP.API.IntegrationTests.csproj --configuration Release --no-build --verbosity normal
